<resources>
    <string name="app_name">HW3-To-Do-List</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="add_to_do">ADD TO DO</string>
    <string name="checkmark1">checkmark1</string>
    <string name="checkmark2">checkmark2</string>
    <string name="to_do_list">TO-DO-LIST</string>
    <string name="add_your_tasks_below">ADD YOUR TASKS BELOW</string>
    <string name="go_back">GO BACK</string>
    <string name="save_and_go_back">SAVE AND GO BACK</string>
    <string name="save_and_add_new_task">SAVE AND ADD NEW TASK</string>
    <string name="write_a_task">Write A Task</string>
    <string name="button4">-</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>